--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>AVENUE FASHION</title>
   </head>
   <body>
@@ -15,7 +16,7 @@
             7. article
          -->
     <header>
-      <nav>
+      <nav id="fixNav">
         <div class="logo">
           <h1>AVENUE <span>FASHION</span></h1>
         </div>
@@ -32,10 +33,10 @@
           <li><a href="#">THE BRAND</a></li>
           <li><a href="#">LOCAL STORES</a></li>
           <li><a href="#">LOOK BOOK</a></li>
+          <div class="search">
+            <input type="text" placeholder="Search.." />
+          </div>
         </ul>
-        <div class="search">
-          <input type="text" placeholder="Search.." />
-        </div>
       </nav>
       <div class="gioi-thieu">
         <div class="content">
@@ -43,7 +44,7 @@
             A V E
           </div>
           <div class="btn-flex">
-            <button type="button">shop men’s collection</button>
+            <button type="button">SHOP MEN’S COLLECTION</button>
           </div>
         </div>
       </div>
