--- a/home.html
+++ b/home.html
@@ -3,51 +3,292 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>DENIMST</title>
     <link rel="stylesheet" href="style.css" />
-    <title>AVENUE FASHION</title>
   </head>
   <body>
-    <!-- 1.header
-            2. nav
-            3. main
-            4. aside
-            5. footer
-            6. section
-            7. article
-         -->
-    <header>
-      <nav id="fixNav">
-        <div class="logo">
-          <h1>AVENUE <span>FASHION</span></h1>
-        </div>
+    <nav id="ThanhTren">
+      <div class="search">
+        <input type="text" placeholder="Search.." />
+      </div>
+      <div class="logo">
+        <img src="https://nemshop.vn/Styles/images/logo.png" alt="" />
+      </div>
+      <div id="fixNav">
         <ul class="menu">
           <li>
-            <a href="#">MENS</a>
+            <a href="#">TRANG CHỦ</a>
+          </li>
+          <li>
+            <a href="#">ĐỒ NỮ</a>
             <ul class="sub-menu">
-              <!-- <li><a href="#"></a></li>
-              <li><a href="#"></a></li>
-              <li><a href="#"></a></li> -->
+              <li><a href="#">Đầm</a></li>
+              <li><a href="#">Quần </a></li>
+              <li><a href="#">Măng tô</a></li>
             </ul>
           </li>
-          <li><a href="#">WOMENS</a></li>
-          <li><a href="#">THE BRAND</a></li>
-          <li><a href="#">LOCAL STORES</a></li>
-          <li><a href="#">LOOK BOOK</a></li>
-          <div class="search">
-            <input type="text" placeholder="Search.." />
-          </div>
+          <li>
+            <a href="#">BỘ SƯU TẬP</a>
+            <ul class="sub-menu">
+              <li><a href="#"></a></li>
+              <li><a href="#"></a></li>
+              <li><a href="#"></a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">ĐÔ NAM</a>
+            <ul class="sub-menu">
+              <li><a href="#"></a></li>
+              <li><a href="#"></a></li>
+              <li><a href="#"></a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">ĐỒ SALE</a>
+            <ul class="sub-menu">
+              <li><a href="#"></a></li>
+              <li><a href="#"></a></li>
+              <li><a href="#"></a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">NEM KIDS</a>
+            <ul class="sub-menu">
+              <li><a href="#"></a></li>
+              <li><a href="#"></a></li>
+              <li><a href="#"></a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">PHỤ KIỆN</a>
+            <ul class="sub-menu">
+              <li><a href="#"></a></li>
+              <li><a href="#"></a></li>
+              <li><a href="#"></a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">THÔNG TIN</a>
+            <ul class="sub-menu">
+              <li><a href="#"></a></li>
+              <li><a href="#"></a></li>
+              <li><a href="#"></a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">TIN TỨC</a>
+            <ul class="sub-menu">
+              <li><a href="#"></a></li>
+              <li><a href="#"></a></li>
+              <li><a href="#"></a></li>
+            </ul>
+          </li>
         </ul>
-      </nav>
-      <div class="gioi-thieu">
-        <div class="content">
-          <div class="Trademark">
-            A V E
+      </div>
+    </nav>
+    <div class="slider">
+      <img
+        src="https://nemshop.vn/FileUpload/Images/Editor/ANH%20WEB%20(1).jpg"
+        alt=""
+      />
+    </div>
+    <div class="selections">
+      <div class="title">BỘ SƯU TẬP</div>
+      <div class="row">
+        <div class="column">
+          <div class="images">
+            <a href="#"
+              ><img
+                src="https://nemshop.vn/FileUpload/Images/thumb/307a9700_copy.jpg"
+                alt=""
+            /></a>
           </div>
-          <div class="btn-flex">
-            <button type="button">SHOP MEN’S COLLECTION</button>
+          <h2>JUMSUIT (ÁO LIÊN QUẦN ) HỌA TIẾT <br />KHÔNG TAY J13312</h2>
+          <p>
+            1.205.100 Đ
+          </p>
+          <span>
+            1.854.000 Đ
+          </span>
+        </div>
+
+        <div class="column">
+          <div class="images">
+            <a href="#"
+              ><img
+                src="https://nemshop.vn/FileUpload/Images/thumb/307a9700_copy.jpg"
+                alt=""
+            /></a>
           </div>
+          <h2>JUMSUIT (ÁO LIÊN QUẦN ) HỌA TIẾT <br />KHÔNG TAY J13312</h2>
+          <p>
+            1.205.100 Đ
+          </p>
+          <span>
+            1.854.000 Đ
+          </span>
+        </div>
+
+        <div class="column">
+          <div class="images">
+            <a href="#"
+              ><img
+                src="https://nemshop.vn/FileUpload/Images/thumb/307a9700_copy.jpg"
+                alt=""
+            /></a>
+          </div>
+          <h2>JUMSUIT (ÁO LIÊN QUẦN ) HỌA TIẾT <br />KHÔNG TAY J13312</h2>
+          <p>
+            1.205.100 Đ
+          </p>
+          <span>
+            1.854.000 Đ
+          </span>
         </div>
       </div>
-    </header>
+
+      <div class="row">
+        <div class="column">
+          <div class="images">
+            <a href="#"
+              ><img
+                src="https://nemshop.vn/FileUpload/Images/thumb/d067621412062100418p1757gg35_2.jpg"
+                alt=""
+            /></a>
+          </div>
+          <h2>JUMSUIT (ÁO LIÊN QUẦN ) HỌA TIẾT <br />KHÔNG TAY J13312</h2>
+          <p>
+            1.205.100 Đ
+          </p>
+          <span>
+            1.854.000 Đ
+          </span>
+        </div>
+
+        <div class="column">
+          <div class="images">
+            <a href="#"
+              ><img
+                src="https://nemshop.vn/FileUpload/Images/thumb/d086621412052120418p1693gg35_2.jpg"
+                alt=""
+            /></a>
+          </div>
+          <h2>JUMSUIT (ÁO LIÊN QUẦN ) HỌA TIẾT <br />KHÔNG TAY J13312</h2>
+          <p>
+            1.205.100 Đ
+          </p>
+          <span>
+             1.205.100 Đ
+          </span>
+        </div>
+
+        <div class="column">
+          <div class="images">
+            <a href="#"
+              ><img
+                src="https://nemshop.vn/FileUpload/Images/thumb/d097921442062430443p1792_2.jpg"
+                alt=""
+            /></a>
+          </div>
+          <h2>JUMSUIT (ÁO LIÊN QUẦN ) HỌA TIẾT <br />KHÔNG TAY J13312</h2>
+          <p>
+            1.205.100 Đ
+          </p>
+          <span>
+            1.854.000 Đ
+          </span>
+        </div>
+      </div>
+    </div>
+    <div class="selections">
+      <div class="title">SẢN PHẨM HOT</div>
+      <div class="row">
+        <div class="column">
+          <div class="images">
+            <a href="#"
+              ><img
+                src="https://nemshop.vn/FileUpload/Images/thumb/d131021402062130401p1851gg35_3.jpg"
+                alt=""
+            /></a>
+          </div>
+          <h2>JUMSUIT (ÁO LIÊN QUẦN ) HỌA TIẾT <br />KHÔNG TAY J13312</h2>
+          <p>
+            1.205.100 Đ
+          </p>
+          <span>
+            1.854.000 Đ
+          </span>
+        </div>
+
+        <div class="column">
+          <div class="images">
+            <a href="#"
+              ><img
+                src="https://nemshop.vn/FileUpload/Images/thumb/hw104467742092020418p951gg491.jpg"
+                alt=""
+            /></a>
+          </div>
+          <h2>JUMSUIT (ÁO LIÊN QUẦN ) HỌA TIẾT <br />KHÔNG TAY J13312</h2>
+          <p>
+            1.205.100 Đ
+          </p>
+          <span>
+            1.854.000 Đ
+          </span>
+        </div>
+
+        <div class="column">
+          <div class="images">
+            <a href="#"
+              ><img
+                src="https://nemshop.vn/FileUpload/Images/thumb/j113421962092400401p1596ck35_1.jpg"
+                alt=""
+            /></a>
+          </div>
+          <h2>JUMSUIT (ÁO LIÊN QUẦN ) HỌA TIẾT <br />KHÔNG TAY J13312</h2>
+          <p>
+            1.205.100 Đ
+          </p>
+          <span>
+            1.854.000 Đ
+          </span>
+        </div>
+      </div>
+    </div>
+    <div id="footer">
+      <div class="columnn">
+        <h3>NEM FASHION - THỜI TRANG CÔNG SỞ</h3>
+        <p>Công ty TNHH Dịch vụ và Thương mại An Thành.</p>
+        <p>Số ĐKKD 0107861393 do Sở KHĐT Tp. Hà Nội cấp ngày 04/10/2017</p>
+        <p>
+          Địa chỉ: Phòng 1002, tầng 10, Tòa nhà NEM, số 545 đường Nguyễn Văn Cừ,<br>
+          P. Gia Thụy, Q. Long Biên, Hà Nội
+        </p>
+        <p>Hotline: 0243 9388 512 | Email: nemcskh@gmail.com</p>
+        <a href="#"
+          ><img src="https://nemshop.vn/FileUpload/Images/logobct.png" alt=""
+        /></a>
+      </div>
+
+      <div class="columnn">
+        <h3>DANH MỤC SẢN PHẨM</h3>
+        <p><a href="">Đồ nữ</a></p>
+        <p><a href="">Bộ sưu tập</a></p>
+        <p><a href="">Đồ nam</a></p>
+        <p><a href="">Đồ sale</a></p>
+        <p><a href="">Nem kids</a></p>
+        <p><a href="">Phụ kiện</a></p>
+      </div>
+
+      <div class="columnn">
+        <h3>HỆ THỐNG SHOWROOM</h3>
+        <p><a href="">Nem 58 Kim Mã</a></p>
+        <p><a href="">Nem Tràng Tiền</a></p>
+        <p><a href="">Nem Hàng Lược</a></p>
+        <p><a href="">Nem Bà Triệu</a></p>
+        <p><a href="">Nem Đồng Khởi</a></p>
+        <button>Xem tất cả</button>
+      </div>
+    </div>
   </body>
 </html>
